--- a/pdf-generation-2017-05-18/index.html
+++ b/pdf-generation-2017-05-18/index.html
@@ -116,6 +116,9 @@
         float: right;
         padding-top: 1em;
       }
+      .result-page {
+        box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+      }
     </style>
   </head>
   <body>
